--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "swiper": "^8.3.2",
+    "yarn": "^1.22.19",
     "zalo-sdk": "^2.0.3",
     "zmp-framework": "^1.7.2",
     "zmp-sdk": "^2.22.0"
@@ -47,6 +48,6 @@
     "postcss-preset-env": "^6.7.0",
     "sass": "^1.54.1",
     "tailwindcss": "^3.1.7",
-    "vite": "^2.6.14"
+    "vite": "^2.9.15"
   }
 }
